force-app/main/default/objects/Note_de_Frais__c.object
<CustomObject>
    <fields>
        <fullName>Commentaire__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Commentaire</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <displayFormat>NF-{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>MontantHT__c</fullName>
        <label>Montant HT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MontantTTC__c</fullName>
        <label>Montant TTC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ticket__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ticket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TxTVA__c</fullName>
        <label>Tx TVA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Repas</fullName>
                    <default>true</default>
                    <label>Repas</label>
                </value>
                <value>
                    <fullName>RER / Metro</fullName>
                </value>
                <value>
                    <fullName>Frais kilométrique (selon bareme)</fullName>
                </value>
                <value>
                    <fullName>Frais parking/péage</fullName>
                </value>
                <value>
                    <fullName>EDF</fullName>
                </value>
                <value>
                    <fullName>Eau</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Telephone Portable</fullName>
                </value>
                <value>
                    <fullName>LOYER/CREDIT-Ass. credit</fullName>
                </value>
                <value>
                    <fullName>Taxe Foncière</fullName>
                </value>
                <value>
                    <fullName>Taxe d&apos;habitation</fullName>
                </value>
                <value>
                    <fullName>100% Mutuelle</fullName>
                </value>
                <value>
                    <fullName>100% Cotisation RETRAITE</fullName>
                </value>
                <value>
                    <fullName>Comptable</fullName>
                </value>
                <value>
                    <fullName>Fournitures bureau</fullName>
                </value>
                <value>
                    <fullName>Frais divers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Note de Frais</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Id__c</columns>
        <columns>Type__c</columns>
        <columns>Date__c</columns>
        <columns>NAME</columns>
        <columns>MontantHT__c</columns>
        <columns>TxTVA__c</columns>
        <columns>MontantTTC__c</columns>
        <columns>Ticket__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>TEST</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Date__c</columns>
        <columns>MontantTTC__c</columns>
        <columns>MontantHT__c</columns>
        <columns>Ticket__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>greaterThan</operation>
            <value>LAST_N_MONTHS:2</value>
        </filters>
        <label>NDF Last 2 Months</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nom NDF</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Note_de_Frais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>